fix(front): sidebar active item invisible + mobile menu won't close
- Remove mat-toolbar mat-primary from active nav item (white text on
  white background), use SCSS $primary background instead
- Close sidenav on navigation when in mobile viewport
- Add routeIcon color override for active state

--- a/apps/front/src/assets/scss/layouts/_sidebar.scss
+++ b/apps/front/src/assets/scss/layouts/_sidebar.scss
@@ -37,11 +37,18 @@
       }
 
       &.activeMenu {
+        background-color: $primary !important;
+        color: $white !important;
+
         .mdc-list-item__primary-text {
           color: $white !important;
         }
 
         .mat-mdc-list-item-icon {
+          color: $white !important;
+        }
+
+        .routeIcon {
           color: $white !important;
         }
       }
